Fix vertical align in panel for screens with tiny height

--- a/src/scss/blocks/_panel.scss
+++ b/src/scss/blocks/_panel.scss
@@ -9,6 +9,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 
   font-size: 16px;
   font-family: Arial, sans-serif;
